lib/src/openal_generated_bindings.dart


  void alcDeviceResumeSOFT(
    ffi.Pointer<ALCdevice> device,
  ) {
    return _alcDeviceResumeSOFT(
      device,
    );
  }

  late final _alcDeviceResumeSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcDeviceResumeSOFT>>(
          'alcDeviceResumeSOFT');
  late final _alcDeviceResumeSOFT =
      _alcDeviceResumeSOFTPtr.asFunction<DartAlcDeviceResumeSOFT>(isLeaf: true);

  ffi.Pointer<ALCchar> alcGetStringiSOFT(
    ffi.Pointer<ALCdevice> device,
    int paramName,
    int index,
  ) {
    return _alcGetStringiSOFT(
      device,
      paramName,
      index,
    );
  }

  late final _alcGetStringiSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcGetStringiSOFT>>('alcGetStringiSOFT');
  late final _alcGetStringiSOFT =
      _alcGetStringiSOFTPtr.asFunction<DartAlcGetStringiSOFT>(isLeaf: true);

  int alcResetDeviceSOFT(
    ffi.Pointer<ALCdevice> device,
    ffi.Pointer<ALCint> attribs,
  ) {
    return _alcResetDeviceSOFT(
      device,
      attribs,
    );
  }

  late final _alcResetDeviceSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcResetDeviceSOFT>>(
          'alcResetDeviceSOFT');
  late final _alcResetDeviceSOFT =
      _alcResetDeviceSOFTPtr.asFunction<DartAlcResetDeviceSOFT>(isLeaf: true);

  ffi.Pointer<ALchar> alGetStringiSOFT(
    int pname,
    int index,
  ) {
    return _alGetStringiSOFT(
      pname,
      index,
    );
  }

  late final _alGetStringiSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetStringiSOFT>>('alGetStringiSOFT');
  late final _alGetStringiSOFT =
      _alGetStringiSOFTPtr.asFunction<DartAlGetStringiSOFT>(isLeaf: true);

  void alcGetInteger64vSOFT(
    ffi.Pointer<ALCdevice> device,
    int pname,
    int size,
    ffi.Pointer<ALCint64SOFT> values,
  ) {
    return _alcGetInteger64vSOFT(
      device,
      pname,
      size,
      values,
    );
  }

  late final _alcGetInteger64vSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcGetInteger64vSOFT>>(
          'alcGetInteger64vSOFT');
  late final _alcGetInteger64vSOFT = _alcGetInteger64vSOFTPtr
      .asFunction<DartAlcGetInteger64vSOFT>(isLeaf: true);

  void alEventControlSOFT(
    int count,
    ffi.Pointer<ALenum> types,
    int enable,
  ) {
    return _alEventControlSOFT(
      count,
      types,
      enable,
    );
  }

  late final _alEventControlSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlEventControlSOFT>>(
          'alEventControlSOFT');
  late final _alEventControlSOFT =
      _alEventControlSOFTPtr.asFunction<DartAlEventControlSOFT>(isLeaf: true);

  void alEventCallbackSOFT(
    ALEVENTPROCSOFT callback,
    ffi.Pointer<ffi.Void> userParam,
  ) {
    return _alEventCallbackSOFT(
      callback,
      userParam,
    );
  }

  late final _alEventCallbackSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlEventCallbackSOFT>>(
          'alEventCallbackSOFT');
  late final _alEventCallbackSOFT =
      _alEventCallbackSOFTPtr.asFunction<DartAlEventCallbackSOFT>(isLeaf: true);

  ffi.Pointer<ffi.Void> alGetPointerSOFT(
    int pname,
  ) {
    return _alGetPointerSOFT(
      pname,
    );
  }

  late final _alGetPointerSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetPointerSOFT>>('alGetPointerSOFT');
  late final _alGetPointerSOFT =
      _alGetPointerSOFTPtr.asFunction<DartAlGetPointerSOFT>(isLeaf: true);

  void alGetPointervSOFT(
    int pname,
    ffi.Pointer<ffi.Pointer<ffi.Void>> values,
  ) {
    return _alGetPointervSOFT(
      pname,
      values,
    );
  }

  late final _alGetPointervSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetPointervSOFT>>('alGetPointervSOFT');
  late final _alGetPointervSOFT =
      _alGetPointervSOFTPtr.asFunction<DartAlGetPointervSOFT>(isLeaf: true);

  int alcReopenDeviceSOFT(
    ffi.Pointer<ALCdevice> device,
    ffi.Pointer<ALCchar> deviceName,
    ffi.Pointer<ALCint> attribs,
  ) {
    return _alcReopenDeviceSOFT(
      device,
      deviceName,
      attribs,
    );
  }

  late final _alcReopenDeviceSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcReopenDeviceSOFT>>(
          'alcReopenDeviceSOFT');
  late final _alcReopenDeviceSOFT =
      _alcReopenDeviceSOFTPtr.asFunction<DartAlcReopenDeviceSOFT>(isLeaf: true);

  void alBufferCallbackSOFT(
    int buffer,
    int format,
    int freq,
    ALBUFFERCALLBACKTYPESOFT callback,
    ffi.Pointer<ALvoid> userptr,
  ) {
    return _alBufferCallbackSOFT(
      buffer,
      format,
      freq,
      callback,
      userptr,
    );
  }

  late final _alBufferCallbackSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlBufferCallbackSOFT>>(
          'alBufferCallbackSOFT');
  late final _alBufferCallbackSOFT = _alBufferCallbackSOFTPtr
      .asFunction<DartAlBufferCallbackSOFT>(isLeaf: true);

  void alGetBufferPtrSOFT(
    int buffer,
    int param,
    ffi.Pointer<ffi.Pointer<ALvoid>> ptr,
  ) {
    return _alGetBufferPtrSOFT(
      buffer,
      param,
      ptr,
    );
  }

  late final _alGetBufferPtrSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetBufferPtrSOFT>>(
          'alGetBufferPtrSOFT');
  late final _alGetBufferPtrSOFT =
      _alGetBufferPtrSOFTPtr.asFunction<DartAlGetBufferPtrSOFT>(isLeaf: true);

  void alGetBuffer3PtrSOFT(
    int buffer,
    int param,
    ffi.Pointer<ffi.Pointer<ALvoid>> ptr0,
    ffi.Pointer<ffi.Pointer<ALvoid>> ptr1,
    ffi.Pointer<ffi.Pointer<ALvoid>> ptr2,
  ) {
    return _alGetBuffer3PtrSOFT(
      buffer,
      param,
      ptr0,
      ptr1,
      ptr2,
    );
  }

  late final _alGetBuffer3PtrSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetBuffer3PtrSOFT>>(
          'alGetBuffer3PtrSOFT');
  late final _alGetBuffer3PtrSOFT =
      _alGetBuffer3PtrSOFTPtr.asFunction<DartAlGetBuffer3PtrSOFT>(isLeaf: true);

  void alGetBufferPtrvSOFT(
    int buffer,
    int param,
    ffi.Pointer<ffi.Pointer<ALvoid>> ptr,
  ) {
    return _alGetBufferPtrvSOFT(
      buffer,
      param,
      ptr,
    );
  }

  late final _alGetBufferPtrvSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetBufferPtrvSOFT>>(
          'alGetBufferPtrvSOFT');
  late final _alGetBufferPtrvSOFT =
      _alGetBufferPtrvSOFTPtr.asFunction<DartAlGetBufferPtrvSOFT>(isLeaf: true);

  void alSourcePlayAtTimeSOFT(
    int source,
    int start_time,
  ) {
    return _alSourcePlayAtTimeSOFT(
      source,
      start_time,
    );
  }

  late final _alSourcePlayAtTimeSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSourcePlayAtTimeSOFT>>(
          'alSourcePlayAtTimeSOFT');
  late final _alSourcePlayAtTimeSOFT = _alSourcePlayAtTimeSOFTPtr
      .asFunction<DartAlSourcePlayAtTimeSOFT>(isLeaf: true);

  void alSourcePlayAtTimevSOFT(
    int n,
    ffi.Pointer<ALuint> sources,
    int start_time,
  ) {
    return _alSourcePlayAtTimevSOFT(
      n,
      sources,
      start_time,
    );
  }

  late final _alSourcePlayAtTimevSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSourcePlayAtTimevSOFT>>(
          'alSourcePlayAtTimevSOFT');
  late final _alSourcePlayAtTimevSOFT = _alSourcePlayAtTimevSOFTPtr
      .asFunction<DartAlSourcePlayAtTimevSOFT>(isLeaf: true);

  void alDebugMessageCallbackEXT(
    ALDEBUGPROCEXT callback,
    ffi.Pointer<ffi.Void> userParam,
  ) {
    return _alDebugMessageCallbackEXT(
      callback,
      userParam,
    );
  }

  late final _alDebugMessageCallbackEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlDebugMessageCallbackEXT>>(
          'alDebugMessageCallbackEXT');
  late final _alDebugMessageCallbackEXT = _alDebugMessageCallbackEXTPtr
      .asFunction<DartAlDebugMessageCallbackEXT>(isLeaf: true);

  void alDebugMessageInsertEXT(
    int source,
    int type,
    int id,
    int severity,
    int length,
    ffi.Pointer<ALchar> message,
  ) {
    return _alDebugMessageInsertEXT(
      source,
      type,
      id,
      severity,
      length,
      message,
    );
  }

  late final _alDebugMessageInsertEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlDebugMessageInsertEXT>>(
          'alDebugMessageInsertEXT');
  late final _alDebugMessageInsertEXT = _alDebugMessageInsertEXTPtr
      .asFunction<DartAlDebugMessageInsertEXT>(isLeaf: true);

  void alDebugMessageControlEXT(
    int source,
    int type,
    int severity,
    int count,
    ffi.Pointer<ALuint> ids,
    int enable,
  ) {
    return _alDebugMessageControlEXT(
      source,
      type,
      severity,
      count,
      ids,
      enable,
    );
  }

  late final _alDebugMessageControlEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlDebugMessageControlEXT>>(
          'alDebugMessageControlEXT');
  late final _alDebugMessageControlEXT = _alDebugMessageControlEXTPtr
      .asFunction<DartAlDebugMessageControlEXT>(isLeaf: true);

  void alPushDebugGroupEXT(
    int source,
    int id,
    int length,
    ffi.Pointer<ALchar> message,
  ) {
    return _alPushDebugGroupEXT(
      source,
      id,
      length,
      message,
    );
  }

  late final _alPushDebugGroupEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlPushDebugGroupEXT>>(
          'alPushDebugGroupEXT');
  late final _alPushDebugGroupEXT =
      _alPushDebugGroupEXTPtr.asFunction<DartAlPushDebugGroupEXT>(isLeaf: true);

  void alPopDebugGroupEXT() {
    return _alPopDebugGroupEXT();
  }

  late final _alPopDebugGroupEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlPopDebugGroupEXT>>(
          'alPopDebugGroupEXT');
  late final _alPopDebugGroupEXT =
      _alPopDebugGroupEXTPtr.asFunction<DartAlPopDebugGroupEXT>(isLeaf: true);

  int alGetDebugMessageLogEXT(
    int count,
    int logBufSize,
    ffi.Pointer<ALenum> sources,
    ffi.Pointer<ALenum> types,
    ffi.Pointer<ALuint> ids,
    ffi.Pointer<ALenum> severities,
    ffi.Pointer<ALsizei> lengths,
    ffi.Pointer<ALchar> logBuf,
  ) {
    return _alGetDebugMessageLogEXT(
      count,
      logBufSize,
      sources,
      types,
      ids,
      severities,
      lengths,
      logBuf,
    );
  }

  late final _alGetDebugMessageLogEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetDebugMessageLogEXT>>(
          'alGetDebugMessageLogEXT');
  late final _alGetDebugMessageLogEXT = _alGetDebugMessageLogEXTPtr
      .asFunction<DartAlGetDebugMessageLogEXT>(isLeaf: true);

  void alObjectLabelEXT(
    int identifier,
    int name,
    int length,
    ffi.Pointer<ALchar> label,
  ) {
    return _alObjectLabelEXT(
      identifier,
      name,
      length,
      label,
    );
  }

  late final _alObjectLabelEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlObjectLabelEXT>>('alObjectLabelEXT');
  late final _alObjectLabelEXT =
      _alObjectLabelEXTPtr.asFunction<DartAlObjectLabelEXT>(isLeaf: true);

  void alGetObjectLabelEXT(
    int identifier,
    int name,
    int bufSize,
    ffi.Pointer<ALsizei> length,
    ffi.Pointer<ALchar> label,
  ) {
    return _alGetObjectLabelEXT(
      identifier,
      name,
      bufSize,
      length,
      label,
    );
  }

  late final _alGetObjectLabelEXTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetObjectLabelEXT>>(
          'alGetObjectLabelEXT');
  late final _alGetObjectLabelEXT =
      _alGetObjectLabelEXTPtr.asFunction<DartAlGetObjectLabelEXT>(isLeaf: true);

  int alcEventControlSOFT(
    int count,
    ffi.Pointer<ALCenum> events,
    int enable,
  ) {
    return _alcEventControlSOFT(
      count,
      events,
      enable,
    );
  }

  late final _alcEventControlSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcEventControlSOFT>>(
          'alcEventControlSOFT');
  late final _alcEventControlSOFT =
      _alcEventControlSOFTPtr.asFunction<DartAlcEventControlSOFT>(isLeaf: true);

  void alcEventCallbackSOFT(
    ALCEVENTPROCTYPESOFT callback,
    ffi.Pointer<ffi.Void> userParam,
  ) {
    return _alcEventCallbackSOFT(
      callback,
      userParam,
    );
  }

  late final _alcEventCallbackSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcEventCallbackSOFT>>(
          'alcEventCallbackSOFT');
  late final _alcEventCallbackSOFT = _alcEventCallbackSOFTPtr
      .asFunction<DartAlcEventCallbackSOFT>(isLeaf: true);
}
